Functionnal Cart and Validate Command with modal form. Landing page.

--- a/public/details.html
+++ b/public/details.html
@@ -19,7 +19,7 @@
 
         <link rel="stylesheet" href="../style.css" />
 
-        <title>Appareils Photo</title>
+        <title>Details</title>
     </head>
     <body>
         <header></header>
