--- a/public/commande.html
+++ b/public/commande.html
@@ -17,22 +17,27 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer" />
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="../style.css" />
 
-        <title>Accueil</title>
+        <title>Commande</title>
     </head>
     <body>
         <header></header>
         <main class="container">
-            <h1>Nos Appareils Photo</h1>
-            <div id="products" class="d-flex flex-wrap gap-5"></div></main>
+            <h1>Ma commande</h1>
+            <div id="products" class="d-flex flex-wrap gap-5"></div>
+            <div id="prixTotal" class=""></div>
+            <div id="email" class=""></div>
+            <div id="name" class=""></div>
+            <div id="adress" class=""></div>
+        </main>
         <footer></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="header-footer.js"></script>
-        <script src="accueil.js"></script>
+        <script src="../header-footer.js"></script>
+        <script src="../commande.js"></script>
     </body>
 </html>
