Filter list, header and footer, image fullscreen

--- a/public/panier.html
+++ b/public/panier.html
@@ -25,7 +25,7 @@
         <header></header>
         <main class="container">
             <h1>Mon Panier</h1>
-            <div id="products" class="d-flex flex-wrap gap-5"></div>
+            <div id="products" class="d-flex justify-content-evenly flex-wrap gap-5"></div>
             <div id="prixTotal" class=""></div>
             <div id="validation"></div>
             <div class="modal" tabindex="-1" id="confirmCommand">
@@ -69,7 +69,7 @@
               </div>
               
         </main>
-        <footer></footer>
+        <footer class="container mt-5"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
