--- a/public/commande.html
+++ b/public/commande.html
@@ -25,13 +25,13 @@
         <header></header>
         <main class="container">
             <h1>Ma commande</h1>
-            <div id="products" class="d-flex flex-wrap gap-5"></div>
+            <div id="products" class="d-flex justify-content-evenly flex-wrap gap-5"></div>
             <div id="prixTotal" class=""></div>
             <div id="email" class=""></div>
             <div id="name" class=""></div>
             <div id="adress" class=""></div>
         </main>
-        <footer></footer>
+        <footer class="container mt-5"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
