--- a/public/details.html
+++ b/public/details.html
@@ -24,18 +24,39 @@
     <body>
         <header></header>
         <main class="container">
-            <h1 class="row">Nos Appareils Photo</h1>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" style="--bs-modal-width: 100%">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h2 class="modal-title fs-5" id="exampleModalLabel"></h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img
+                        class="w-100"
+                        alt=""
+                        src=""/>
+                    </div>
+                </div>
+                </div>
+            </div>
+  
+            <h1 class="row"></h1>
             <div class="row">
-                <img
+                <button  data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                    <img
                     alt=""
                     src=""
-                    class="col-xl-6 col-lg-6 col-md-12 col-sm-12" />
+                    class="w-100"
+                    />
+                </button>
                 <div
                     class="col-xl-6 col-lg-6 col-md-12 col-sm-12"
                     id="details"></div>
             </div>
         </main>
-        <footer></footer>
+        <footer class="container mt-5"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
