--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
         <header></header>
         <main class="container">
             <h1>Nos Appareils Photo</h1>
-            <div id="products" class="d-flex flex-wrap gap-5"></div></main>
-        <footer></footer>
+            <div id="products" class="d-flex justify-content-evenly flex-wrap gap-5"></div></main>
+        <footer class="container mt-5"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
