--- a/public/list.html
+++ b/public/list.html
@@ -25,9 +25,35 @@
         <header></header>
         <main class="container">
             <h1>Nos Appareils Photo</h1>
-            <div id="products" class="d-flex flex-wrap gap-5"></div>
+            <div class="row mb-3 d-flex align-items-center">
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche" id="searchInput">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="price-input d-flex flex-column">
+                        <div class="mb-2 d-flex justify-content-between">
+                            <span>Prix Minimum</span>
+                            <input type="number" class="input-min text-center" value="0" step="50" min="0" max="5000">
+                        </div>
+                        <div class="mb-3 d-flex justify-content-between">
+                            <span>Prix Maximum</span>
+                            <input type="number" class="input-max text-center" value="5000" step="50" min="0" max="5000">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slider">
+                            <div class="progress"></div>
+                        </div>
+                        <div class="range-input">
+                            <input type="range" class="range-min" min="0" max="5000" value="0" step="100">
+                            <input type="range" class="range-max" min="0" max="5000" value="5000" step="100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="products" class="d-flex justify-content-evenly flex-wrap gap-5"></div>
         </main>
-        <footer></footer>
+        <footer class="container mt-5"></footer>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
